--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -41,7 +41,7 @@
           </li>
         <% else %>
           <li>
-            <a href="#" class="btn" data-target="#fb-login" data-toggle="modal">Sign in / Sign up</a>
+            <a href="#" data-target="#fb-login" data-toggle="modal">Sign in / Sign up</a>
           </li>
         <% end %>
       </ul>
