--- a/app/views/dialogs/collection.html.erb
+++ b/app/views/dialogs/collection.html.erb
@@ -21,11 +21,17 @@
   <div class="pad-right">
     <section id="cards">
       <% @dialogs.each do |d| %>
-        <img src="<%= d.img_url %>" class="img img-tweet"> 
-          <p class="pad-left">
-            <%= d.text.match(/(?<=: )(.*?),/) %>
-          </p>
+       <!--  <img src="<%#= d.img_url %>" class="img img-tweet">  -->
+        <div class="img-tweet-box">
+          <div class="overimg"></div>
+          <%= link_to "-", dialog_remove_path(:dialog_id => d.id), method: :put, class: "button-" %>
+          <img src="<%= d.img_url %>" class="img img-tweet">
+        </div>
+        <p class="pad-left">
+          <%= d.text.match(/(?<=: )(.*?),/) %>
+        </p>
       <% end %>
     </section>
   </div>
 </div>
+
