--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,19 +1,11 @@
 <%= content_for(:title) do %>
-  Home
+  Negentropy
 <% end %>
 
 <%= content_for(:description) do %>
   <%# TODO %>
 <% end %>
 
-
-<div class="container">
-  <div class="row">
-    <div class="col-xs-12 col-sm-6">
-
-    </div>
-  </div>
-</div>
 
 
 <%= render 'dialogs/stream' %>
