--- a/app/views/dialogs/_stream.html.erb
+++ b/app/views/dialogs/_stream.html.erb
@@ -1,7 +1,7 @@
 <div class="scroll-top">Back to top</div>
   <div class="container">
     <div class="row">
-      <div class="col-xs-8 col-xs-offset-2">
+      <div class="col-xs-8">
         <% Dialog.all.each do |d| %>
           <div class="stream-item-container">
             <div class="stream-item">
