--- a/app/views/dialogs/collection.html.erb
+++ b/app/views/dialogs/collection.html.erb
@@ -7,12 +7,12 @@
   <div class="row">
     <div class="col-xs-2 col-xs-offset-10">
       <div class="fixed">
-        <p class="padding-bottom">
+        <p class="padding-bottom padding-top">
           <u>Artists:</u>
         </p>
-        <% @dialogs.each do |t| %>
+        <% @dialogs.each do |d| %>
           <p>
-            <%= t.text.match(/(?<=: )(.*?),/) %>
+            <%= link_to d.artwork.artist.name, artist_path(d.artwork.artist_id) %>
           </p>
         <% end %>
       </div>
@@ -23,7 +23,7 @@
       <% @dialogs.each do |d| %>
         <img src="<%= d.img_url %>" class="img img-tweet"> 
           <p class="pad-left">
-            <%= d.text.match(/(?<=: )(.*?),/) %>
+            <%= link_to d.artwork.artist.name, artist_path(d.artwork.artist_id) %>
           </p>
       <% end %>
     </section>
