--- a/app/assets/stylesheets/layout/_utilities.scss
+++ b/app/assets/stylesheets/layout/_utilities.scss
@@ -16,6 +16,10 @@
 .padding-bottom {
   padding-bottom: 10px;
 }
+.padding-extra-top {
+  padding-top: 70px;
+}
+
 .padding-top {
   padding-top: 10px;
 }
