new front for home

--- a/app/views/dialogs/_stream.html.erb
+++ b/app/views/dialogs/_stream.html.erb
@@ -2,13 +2,10 @@
   <div class="row">
     <div class="col-xs-12">
       <% Dialog.order(origin_date: :desc).each do |d| %>
-        <div class="stream-item-container">
-
+        <div class="stream-item-container border-bot">
           <div class="row" id="origin_tweet_box">
-            <div class="col-xs-1">
-              <img src="<%= d.origin_profilpic_url %>" class="img img-origin-tweet" >
-            </div>
-            <div class="col-xs-11" id="origin_tweet_profil">
+            <div class="col-xs-12" id="">
+              <img src="<%= d.origin_profilpic_url %>" class="img img-origin-tweet" id="img-tweetos" >
               <p><strong><%= d.origin_user %></strong><br>
                 @<%= d.origin_screen_name %>
                 <% if d.origin_date != nil %>
@@ -19,44 +16,12 @@
           </div>
 
           <div class="row">
-             <div class="col-xs-6 col">
-                <div class="img-tweet-box">
-                    <div class="overlay"></div>
-                      <%= link_to "+", dialog_add_path(:dialog_id => d.id), method: :put, class: "button" %>
-                    <img src="<%= d.img_url %>" class="img img-tweet">
-                </div>
+            <div class="col-xs-6">
+              <div class="img-tweet-box">
+                <div class="overlay"></div>
+                  <%= link_to "+", dialog_add_path(:dialog_id => d.id), method: :put, class: "button" %>
+                <img src="<%= d.img_url %>" class="img img-tweet">
               </div>
-              <div class="col-xs-2">
-                <div class="img-tweet-box">
-                    <div class="overlay"></div>
-                    <%= link_to "+", dialog_add_path(:dialog_id => d.id), method: :put, class: "button" %>
-                     <% Dialog.limit(1).order('RANDOM()').each do |d| %>
-                    <img src="<%= d.img_url %>" class="img img-tweet">
-                    <% end %>
-                </div>
-              </div>
-               <div class="col-xs-2">
-                <div class="img-tweet-box">
-                    <div class="overlay"></div>
-                    <%= link_to "+", dialog_add_path(:dialog_id => d.id), method: :put, class: "button" %>
-                     <% Dialog.limit(1).order('RANDOM()').each do |d| %>
-                    <img src="<%= d.img_url %>" class="img img-tweet">
-                    <% end %>
-                  </div>
-                </div>
-                <div class="col-xs-2">
-                  <div class="img-tweet-box">
-                      <div class="overlay"></div>
-                      <%= link_to "+", dialog_add_path(:dialog_id => d.id), method: :put, class: "button" %>
-
-                       <% Dialog.limit(1).order('RANDOM()').each do |d| %>
-                      <img src="<%= d.img_url %>" class="img img-tweet">
-                      <% end %>
-                  </div>
-                </div>
-          </div>
-
-          <div class="row">
               <div class="col-xs-12 col-sm-10">
                   <p>
                     <%= link_to d.artwork.artist.name, artist_path(d.artwork.artist_id) %>,
@@ -64,9 +29,28 @@
                     <%= d.artwork.date %>
                   </p>
               </div>
+            </div>
+              <section id="cards">
+                <div>
+                 <img src="http://lorempixel.com/g/400/200/cats/" alt="">
+                </div>
+                <div>
+                 <img src="http://lorempixel.com/g/200/200/cats/" alt="">
+                </div>
+                <div>
+                 <img src="http://lorempixel.com/g/200/400/cats/" alt="">
+                </div>
+                <div>
+                 <img src="http://lorempixel.com/g/600/200/cats/" alt="">
+                </div>
+                <div>
+                 <img src="http://lorempixel.com/g/400/400/cats/" alt="">
+                </div>
+              </section>
           </div>
-        <% end %>
-      </div>
+        </div>
+      <% end %>
+
     </div>
   </div>
 </div>
