--- a/app/assets/stylesheets/layout/_utilities.scss
+++ b/app/assets/stylesheets/layout/_utilities.scss
@@ -19,11 +19,9 @@
 .padding-top {
   padding-top: 10px;
 }
-
 .padding-top-home {
   padding-top: 100px;
 }
-
 .padding-right {
   padding-right: 5px;
 }
@@ -59,6 +57,12 @@
   margin: 10px;
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
 }
+#img-tweetos{
+  float: left;
+  margin-right: 10px;
+  width: 30px;
+}
+
 .stream-item {
   padding: 10px;
   margin: 10px;
@@ -107,7 +111,7 @@
   z-index: 1000;
   position: absolute;
   bottom: 0px;
-  right: 240px;
+  right: 220px;
   width: 7%;
   padding: 10px 0;
   background: black;
